--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ scikit-learn = "^1.4.2"
 pulp = "^2.8.0"
 pydantic = "^2.7.1"
 pyyaml = "^6.0.1"
+scikit-image = "^0.23.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
