--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Danny Wood <danny@fuzzylabs.ai>"]
 license = "MIT license"
 readme = "README.md"
 
-packages = [{include = "voronoi", from = "voronoi_generator"}]
+packages = [{include = "voronoi_generator"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
